# cgm

./: .gitignore  CMakeLists.txt
CGM/: CMakeLists.txt  Common.hpp  Common.inl  Coordinates.hpp  CoordinatesIO.hpp  Core.hpp  CoreIO.hpp  Global.hpp  Interpolations.hpp  Primitives.hpp  Projections.hpp  Utils.hpp
CGM/Cartesian/: 2D.hpp  2DIO.hpp  3D.hpp  3DIO.hpp  Common.hpp  Common.inl
CGM/Cartesian/2D/: InternalUtils.inl  ModuleGlobals.hpp  Operators.hpp  Operators.inl
CGM/Cartesian/2D/Functions/: Axes.hpp  Axes.inl  IO.hpp  IO.inl  Orientation.hpp  Orientation.inl  Utils.hpp  Utils.inl
CGM/Cartesian/2D/Types/: Axes.hpp  Axes.inl  Enums.hpp
CGM/Cartesian/3D/: ModuleGlobals.hpp
CGM/Cartesian/3D/Functions/: Axes.hpp  Axes.inl  IO.hpp  IO.inl  Orientation.hpp  Orientation.inl  Quaternion.hpp  Quaternion.inl  Utils.hpp  Utils.inl
CGM/Cartesian/3D/Operators/: Axes.hpp  Axes.inl  Quaternion.hpp  Quaternion.inl
CGM/Cartesian/3D/Types/: Axes.hpp  Axes.inl  Config.hpp  Config.inl  Enums.hpp  Quaternion.hpp  Quaternion.inl  Typedefs.hpp
CGM/Coordinates/: Operators.hpp  Operators.inl
CGM/Coordinates/Functions/: Converters.hpp  Converters.inl  IO.hpp  IO.inl  VectorComponents.inl
CGM/Coordinates/Types/: Cylindrical.hpp  Cylindrical.inl  Polar.hpp  Polar.inl  Spherical.hpp  Spherical.inl
CGM/Core/: ModuleGlobals.hpp
CGM/Core/Functions/: IO.hpp  IO.inl  Matrix.hpp  Matrix.inl  Vector.hpp  Vector.inl
CGM/Core/Operators/: Matrix.hpp  Matrix.inl  MatrixVectorMultiplication.hpp  MatrixVectorMultiplication.inl  Vector.hpp  Vector.inl
CGM/Core/Types/: Enums.hpp  Matrix.hpp  Matrix.inl  Size.hpp  Typedefs.hpp  Vector.hpp  Vector.inl
CGM/Interpolations/: ModuleGlobals.hpp
CGM/Interpolations/Functions/: Clamp.hpp  Clamp.inl  Fit.hpp  Fit.inl  FitUnclamped.hpp  FitUnclamped.inl  Interps.hpp  Interps.inl  Numbers.hpp  Numbers.inl  Vectors.hpp  Vectors.inl
CGM/Modules/: Coordinates.hpp  Core.hpp  Global.hpp  Interpolations.hpp  Projections.hpp  Utils.hpp
CGM/Modules/Cartesian/: 2D.hpp  3D.hpp  Common.hpp  Common.inl  CommonIO.hpp  CommonIO.inl
CGM/Modules/Cartesian/2D/: ModuleGlobals.hpp  Operators.hpp
CGM/Modules/Cartesian/3D/: ModuleGlobals.hpp
CGM/Modules/Coordinates/: Operators.hpp  Operators.inl
CGM/Modules/Coordinates/Functions/: Converters.hpp  IO.hpp  IO.inl  VectorComponents.hpp  VectorComponents.inl
CGM/Modules/Coordinates/Types/: Cylindrical.hpp  Polar.hpp  Spherical.hpp  Spherical.inl
CGM/Modules/Core/: ModuleGlobals.hpp
CGM/Modules/Core/Functions/: IO.hpp  Matrix.hpp  Matrix.inl  Vector.hpp  Vector.inl
CGM/Modules/Core/Operators/: Matrix.hpp  Matrix.inl  MatrixVectorMultiplication.hpp  MatrixVectorMultiplication.inl  Vector.hpp  Vector.inl
CGM/Modules/Core/Types/: Enums.hpp  Matrix.hpp  Matrix.inl  Size.hpp  Size.inl  Typedefs.hpp  Vector.hpp  Vector.inl
CGM/Modules/Interpolations/: ModuleGlobals.hpp
CGM/Modules/Interpolations/Functions/: Clamp.hpp  Clamp.inl  Fit.hpp  Fit.inl  FitUnclamped.hpp  FitUnclamped.inl  Interps.hpp  Interps.inl
CGM/Modules/Primitives/: ModuleGlobals.hpp
CGM/Modules/Primitives/Functions/: Angles.hpp  Angles.inl  Comparison.hpp  Comparison.inl  Numbers.hpp  Numbers.inl
CGM/Modules/Projections/: ModuleGlobals.hpp  Types.hpp
CGM/Modules/Shapes/: ModuleGlobals.hpp
CGM/Modules/Transformations/: 2D.hpp  3D.hpp  Common.hpp  CommonIO.hpp  CommonIO.inl
CGM/Modules/Utils/: ModuleGlobals.hpp  TypeTraits.hpp
CGM/Projections/: Functions.hpp  Functions.inl  Types.hpp
CGM/Projections/Functions/: Orthographic.hpp  Orthographic.inl  Perspective.hpp  Perspective.inl
CGM/Shapes/: ModuleGlobals.hpp
CGM/Transformations/: 2D.hpp  2DIO.hpp  3D.hpp  3DIO.hpp  Common.hpp  Common.inl
CGM/Transformations/2D/: Operators.hpp  Operators.inl
CGM/Transformations/3D/: ModuleGlobals.hpp  Operators.hpp  Operators.inl
CGM/Utils/: ModuleGlobals.hpp  TypeTraits.hpp
CGM/Utils/Functions/: Angles.hpp  Angles.inl  Comparison.hpp  Comparison.inl  Numbers.hpp  Numbers.inl
CGM/Utils/Types/: Number.hpp  Number.inl  NumberConstraints.hpp  NumberConstraints.inl
cgm/: CMakeLists.txt  (+8 more)
develop/examples/Core/: CMakeLists.txt
develop/tests/: CMakeLists.txt  Coordinates.cpp
develop/tests/Core/: Coordinates.cpp  MatrixVectorMultiplication.cpp
develop/tests/Matrix/: Functions.cpp
develop/tests/Quaternion/: Functions.cpp  Operators.cpp
develop/tests/Vector/: Arithmetic.cpp  ComparisonWithOther.cpp  ComparisonWithScalar.cpp  Functions.cpp  VectorMatrixMultiplication.cpp
develop/tests/unit/: CMakeLists.txt  Coordinates.cpp  Matrix.cpp  Spherical.cpp  Vector.cpp  XForm.cpp  XForms.cpp
examples/Core/: CMakeLists.txt
examples/Core/include/: Global.hpp
examples/Launchers/BasicRotations/: CMakeLists.txt  Launcher.cpp  Launcher.hpp
examples/Launchers/Text/: CMakeLists.txt  Launcher.cpp  Launcher.hpp  TextObject.cpp  TextObject.hpp  main.cpp
examples/Launchers/Text2D/: CMakeLists.txt  Launcher.cpp  Launcher.hpp
tests/: CMakeLists.txt  Coordinates.cpp
tests/Cartesian/2D/: InternalFunctions.cpp
tests/Cartesian/3D/: Operators.cpp
tests/Core/: MatrixVectorMultiplication.cpp
tests/Core/Matrix/: Access.cpp  Functions.cpp
tests/Core/Vector/: Arithmetic.cpp  ComparisonWithOther.cpp  ComparisonWithScalar.cpp  Functions.cpp  Getters.cpp
tests/Interpolations/: Clamp.cpp  Fit.cpp  Fit01.cpp  Fit01Unclamped.cpp  Fit10.cpp  Fit10Unclamped.cpp  Fit11.cpp  Fit11Unclamped.cpp  FitUnclamped.cpp  Interps.cpp  Linear.cpp  UnclampedFit.cpp  UnclampedFit01.cpp  UnclampedFit10.cpp  UnclampedFit11.cpp
tests/Transformations/2D/: Apply.cpp  Input.hpp  Reflect.cpp  Refract.cpp  Rotate.cpp  Scale.cpp  Transform.cpp  Translation.cpp
tests/Transformations/3D/: Apply.cpp  Input.hpp  Reflect.cpp  Refract.cpp  Rotate.cpp  Scale.cpp  Transform.cpp  Translation.cpp
tests/suites/coordinates/: coordinates.cpp
tests/suites/core/: matrix_vector_multiplication.cpp
tests/suites/interpolations/: clamp.cpp  fit.cpp  fit01.cpp  fit01_unclamped.cpp  fit10.cpp  fit10_unclamped.cpp  fit11.cpp  fit11_unclamped.cpp  fit_unclamped.cpp  interps.cpp
(+1531 files in other folders)
