# ####################################################################################### #
# Init project
# ####################################################################################### #

cmake_minimum_required(VERSION 3.12)

project(ComputerGraphixMath
    LANGUAGES CXX
    VERSION 0.0.1
)

# ####################################################################################### #
# Project parameters
# ####################################################################################### #

include(cmake/Parameters.cmake)

# ####################################################################################### #
# Subprojects
# ####################################################################################### #

add_subdirectory(CGM)
add_subdirectory(tests)
add_subdirectory(examples)

# ####################################################################################### #
# Installation
# ####################################################################################### #

include(cmake/Installation.cmake)
