# ####################################################################################### #
# Init project
# ####################################################################################### #

cmake_minimum_required(VERSION 3.18)

project(cgm
    LANGUAGES CXX
    VERSION 0.9.2
)

# ####################################################################################### #
# Project parameters
# ####################################################################################### #

include(cmake/parameters.cmake)

# ####################################################################################### #
# Subprojects
# ####################################################################################### #

add_subdirectory(cgm)
add_subdirectory(tests)
add_subdirectory(examples)

# ####################################################################################### #
# Installation
# ####################################################################################### #

include(cmake/installation.cmake)
